# ray-tracing-in-one-weekend

./: .gitignore  Cargo.toml  README.md
src/: aabb.rs  bvh.rs  camera.rs  color.rs  hittable.rs  hittable_list.rs  lib.rs  main.rs  material.rs  onb.rs  pdf.rs  perlin.rs  ray.rs  scenes.rs  shape.rs  sphere.rs  texture.rs  util.rs  vec.rs
src/hittable/: aabb.rs  box3d.rs  bvh.rs  constant_medium.rs  flip_face.rs  hittable_list.rs  mod.rs  rect.rs  rotate.rs  sphere.rs  translate.rs  xy_rect.rs  xz_rect.rs  yz_rect.rs
src/material/: dielectric.rs  diffuse.rs  isotropic.rs  lambertian.rs  metal.rs  mod.rs
src/scenes/: cornell_box.rs  cornell_smoke.rs  mod.rs  next_week_final.rs  perlin.rs  random_world.rs  rotate_test.rs  simple_light.rs
src/texture/: checker.rs  image.rs  marble.rs  mod.rs  noise.rs  perlin.rs  solidcolor.rs  turbulence.rs
