[package]
name = "ray-tracing-in-one-weekend"
version = "0.1.0"
authors = ["Bryan Brady <bryan.brady@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
threadpool = "1.8.1"
num_cpus = "1.13.0"
enum_dispatch = "0.3.4"
image = "0.23.12"
cpuprofiler = { version = "0.0.4", optional = true }
indicatif = {version = "0.15.0", features = ["rayon"]}
rayon = "1.5.0"

[features]
default = ["rand/small_rng"]
profile = ["cpuprofiler"]

[[bin]]
name = "pi"
path = "src/bin/pi.rs"

[[bin]]
name = "mc-integration"
path = "src/bin/mc-integration.rs"

