[package]
name = "ray-tracing-in-one-weekend"
version = "0.1.0"
authors = ["Bryan Brady <bryan.brady@gmail.com>"]
edition = "2018"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpuprofiler = { version = "0.0.4", optional = true }
enum_dispatch = "0.3.4"
image = "0.23.12"
indicatif = {version = "0.15.0", features = ["rayon"]}
num_cpus = "1.13.0"
rand = "0.7"
rayon = "1.5.0"
structopt = "0.3.21"
threadpool = "1.8.1"

[features]
default = ["rand/small_rng"]
profile = ["cpuprofiler"]

[lib]
name = "rtlib"
path = "src/lib.rs"

[[bin]]
name = "pi"
path = "src/bin/pi.rs"

[[bin]]
name = "mc-integration"
path = "src/bin/mc-integration.rs"

[[bin]]
name = "sphere-directions"
path = "src/bin/sphere-directions.rs"

[[bin]]
name = "sphere-plot"
path = "src/bin/sphere-plot.rs"

[[bin]]
name = "cos-cubed"
path = "src/bin/cos-cubed.rs"

[[bin]]
name = "cos-density"
path = "src/bin/cos-density.rs"

